RESOLVED FIXED218537
Don't assert there is no checkpoint side state when dropping the JSLock
https://bugs.webkit.org/show_bug.cgi?id=218537
Summary Don't assert there is no checkpoint side state when dropping the JSLock
Saam Barati
Reported 2020-11-03 14:57:39 PST
...
Attachments
patch (1.42 KB, patch)
2020-11-03 15:06 PST, Saam Barati
no flags
Saam Barati
Comment 1 2020-11-03 15:06:41 PST
EWS
Comment 2 2020-11-03 15:36:23 PST
Committed r269338: <https://trac.webkit.org/changeset/269338> All reviewed patches have been landed. Closing bug and clearing flags on attachment 413111 [details].
Radar WebKit Bug Importer
Comment 3 2020-11-03 15:37:25 PST
Note You need to log in before you can comment on or make changes to this bug.