Don't assert there is no checkpoint side state when dropping the JSLock https://bugs.webkit.org/show_bug.cgi?id=218537

Reviewed by Filip Pizlo.

You may have multiple OSR exit sidestate data on the stack, and then call into
API code, which might DropAllLocks. Hence, this assert is wrong.

Working on a test. Will land in a followup.

* runtime/JSLock.cpp:
(JSC::JSLock::willReleaseLock):

Canonical link: https://commits.webkit.org/231185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269338 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Author:    Saam Barati <sbarati@apple.com>
Date:      Tue Nov 3 23:36:18 2020 +0000

Backport from: https://github.com/WebKit/WebKit/commit/d8db90e0fb9b5b3aba8bf05770a96cbad4ee8186